--- a/app.json
+++ b/app.json
@@ -1,15 +1,14 @@
 {
   "expo": {
-    "name": "The",
-    "slug": "The",
+    "name": "TheCityLife",
+    "slug": "TheCityLife",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icons.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/Splashscreen.png",
+      "resizeMode": "cover"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -22,9 +21,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icons.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.ab96746412.TheCityLife"
     },
     "web": {
       "favicon": "./assets/favicon.png"
